--- a/provisioning/roles/master/templates/kube_flannel.j2
+++ b/provisioning/roles/master/templates/kube_flannel.j2
@@ -174,7 +174,7 @@ spec:
         args:
         - --ip-masq
         - --kube-subnet-mgr
-        - --iface={{ flannel_iface }}
+        - --iface={{ private_network_iface }}
         resources:
           requests:
             cpu: "100m"
