--- a/provisioning/roles/dns-server/templates/db.fwd.k8s.zone.j2
+++ b/provisioning/roles/dns-server/templates/db.fwd.k8s.zone.j2
@@ -1,20 +1,24 @@
 ;
 ; BIND forward data file for k8s.zone
 ;
+
 $TTL	604800
-@	IN	SOA	master.k8s.zone. root.master.k8s.zone. (
-			      2		; Serial
-			 604800		; Refresh
-			  86400		; Retry
-			2419200		; Expire
-			 604800 )	; Negative Cache TTL
-;
-@	IN	NS	localhost.
-@	IN	A	127.0.0.1
-@	IN	AAAA	::1
 
-	IN	NS	master.k8s.zone.
+{% for node in k8s_cluster_nodes if node.id == 'master' %}
+@	IN	SOA	{{ node.hostname }}. root.{{ node.hostname }}. (
+                  2     ; Serial
+             604800     ; Refresh
+              86400     ; Retry
+            2419200     ; Expire
+             604800 )   ; Negative Cache TTL
+{% endfor %}
 
-master.k8s.zone.	IN	A	192.168.33.10
-node1.k8s.zone.		IN	A	192.168.33.21
-node2.k8s.zone.		IN	A	192.168.33.22
+; nameservers
+{% for node in k8s_cluster_nodes if node.id == 'master' %}
+    IN  NS  {{ node.hostname }}.
+{% endfor %}
+
+; A records
+{% for node in k8s_cluster_nodes %}
+{{ node.hostname }}.    IN  A   {{ node.ip }}
+{% endfor %}
