--- a/provisioning/roles/dns-server/templates/named.conf.options.j2
+++ b/provisioning/roles/dns-server/templates/named.conf.options.j2
@@ -1,37 +1,44 @@
 acl "trusted" {
-	192.168.33.10;
-	192.168.33.21;
-	192.168.33.22;
+{% for node in k8s_cluster_nodes %}
+    {{ node.ip }};
+{% endfor %}
 };
 
 options {
-	directory "/var/cache/bind";
+    directory "/var/cache/bind";
 
-	recursion yes;
-	allow-recursion { trusted; };
-	listen-on { 192.168.33.10; };
-	allow-transfer { none; };
+    recursion yes;
+    allow-recursion { trusted; };
 
-	// If there is a firewall between you and nameservers you want
-	// to talk to, you may need to fix the firewall to allow multiple
-	// ports to talk.  See http://www.kb.cert.org/vuls/id/800113
+    listen-on {
+    {% for node in k8s_cluster_nodes if node.id == 'master' %}
+        {{ node.ip }};
+    {% endfor %}
+    };
 
-	// If your ISP provided one or more IP addresses for stable 
-	// nameservers, you probably want to use them as forwarders.  
-	// Uncomment the following block, and insert the addresses replacing 
-	// the all-0's placeholder.
+    allow-transfer { none; };
 
-	forwarders {
-		8.8.8.8;
-		8.8.4.4;
-	};
+    // If there is a firewall between you and nameservers you want
+    // to talk to, you may need to fix the firewall to allow multiple
+    // ports to talk.  See http://www.kb.cert.org/vuls/id/800113
 
-	//========================================================================
-	// If BIND logs error messages about the root key being expired,
-	// you will need to update your keys.  See https://www.isc.org/bind-keys
-	//========================================================================
-	dnssec-validation auto;
+    // If your ISP provided one or more IP addresses for stable 
+    // nameservers, you probably want to use them as forwarders.  
+    // Uncomment the following block, and insert the addresses replacing 
+    // the all-0's placeholder.
 
-	auth-nxdomain no;    # conform to RFC1035
-	listen-on-v6 { any; };
+    forwarders {
+    {% for ip in google_dns_ip %}
+        {{ ip }};
+    {% endfor %}
+    };
+
+    //========================================================================
+    // If BIND logs error messages about the root key being expired,
+    // you will need to update your keys.  See https://www.isc.org/bind-keys
+    //========================================================================
+    dnssec-validation auto;
+
+    auth-nxdomain no;    # conform to RFC1035
+    listen-on-v6 { any; };
 };
